--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,18 +1,17 @@
 %footer#app-footer
-  %p
-    A
-    %a{ href: 'http://codeforamerica.org', target: '_blank' } Code for America
-    project
-    %span.cfaflag
-    developed in partnership with the
-    %a{ href: 'http://www.co.sanmateo.ca.us/portal/site/humanservices', target: '_blank' } San Mateo County Human Services Agency
-    and a
-    #{link_to 'grant from the Knight Foundation', 'http://www.knightfoundation.org/grants/201447979/', target: '_blank'}.
+  %div#left-column
+    #{link_to 'Here For Reentry', 'http://www.here4reentry.com', target: '_blank'} | Search
+    a project developed by
+    #{link_to 'Code for America', 'http://codeforamerica.org', target: '_blank' } in partnership with the
+    #{link_to 'Baltimore Mayor\'s Office on Criminal Justice', 'http://www.baltimorecity.gov', target: '_blank'}
+    and
+    #{link_to 'Living Cities Foundation', 'http://livingcities.org', target: '_blank'}.
 
-  %p.get-this-app
-    %i.fa.fa-bullhorn
-    %a{ href: 'https://github.com/codeforamerica/ohana-web-search' } Get this app
-    for your city or
-    #{link_to 'view project details', 'http://ohanapi.org'}.
+  %div#right-column
+    %p.get-this-app
+      %i.fa.fa-bullhorn
+      %a{ href: 'https://github.com/codeforamerica/ohana-web-search' } Get this app
+      for your city or
+      #{link_to 'view project details', 'http://ohanapi.org'}.
 
   #google-translate-container
