--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,16 +1,39 @@
 %header#content-header
   %h1#logo
-    %a{ href: '/', target: '_self' }
+    %a{ href: "http://www.here4reentry.com/"}
       %img{ src: asset_path(SETTINGS[:site_logo]), alt: "#{SETTINGS[:site_title]} Logo" }
-  %h2= t('branding.header', location: t('branding.location'))
+  %h2
+    %div
+
   %nav
     %ul
       %li
-        %a.popup-trigger.popup-default#about-btn{ href: '/about#about-box' }
+        %a.btn{ href: "http://www.here4reentry.com/about.html" }
           About
       %li
-        %a.popup-trigger.popup-feedback#feedback-btn{ href: '/about#feedback-box', target: '_self' }
-          Feedback
+        %a.btn{ href: "http://www.here4reentry.com/lens.html" }
+          Community Lens
+      %li
+        %a.btn{ href: "http://w-o-m.us" }
+          Word of Mouth
+      %li
+        %a.btn{ href: "http://www.here4reentry.com/ringdown.html" }
+          Ringdown
+      %li
+        %a.btn{ href: "http://www.here4reentry.com/volunteer.html" }
+          Volunteer
+      %li
+        %a.btn{ href: "http://www.here4reentry.com/fight.html" }
+          Join The Fight
+      %li
+        %a.btn{ href: "http://www.here4reentry.com/about.html#donate"}
+          Donate
+      %li
+        %a.btn{ href: "http://www.here4reentry.com/press.html"}
+          Press
+      %li
+        %a.btn{ href: "http://www.here4reentry.com/index.html#modal2"}
+          Contact Us
   .clearfix
 
 -# Hide popups on /about because they are redundant to the content on that page.
